--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "composer/installers": "^1.0.21",
         "wikimedia/composer-merge-plugin": "~1.3",
-        "drupal/address": "8.1.x-dev"
+        "drupal/address": "~8.1-dev"
     },
     "replace": {
         "drupal/core": "~8.1"
