--- a/sites/default/config/core.entity_view_display.node.location.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.location.teaser.yml
@@ -14,4 +14,8 @@ mode: teaser
 content:
   links:
     weight: 100
-hidden: {  }
+hidden:
+  field_address: true
+  field_geofield: true
+  field_image: true
+  field_long_text: true
