--- a/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -14,4 +14,9 @@ mode: teaser
 content:
   links:
     weight: 100
-hidden: {  }
+hidden:
+  field_beggining_date: true
+  field_content_reference: true
+  field_en: true
+  field_image: true
+  field_long_text: true
