--- a/sites/default/config/node.type.article.yml
+++ b/sites/default/config/node.type.article.yml
@@ -1,7 +1,14 @@
 uuid: dc6bd6df-71df-4899-be97-22cb4acf8ecd
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 _core:
   default_config_hash: i4OVV5qrD7abstl4SKS8v5Ee7PuxrL548iZVSty1HRg
 name: Article
