--- a/sites/default/config/block.block.views_block__news_block_1.yml
+++ b/sites/default/config/block.block.views_block__news_block_1.yml
@@ -1,24 +1,24 @@
-uuid: fb3867c5-a981-4cab-ada4-98da028f751f
+uuid: 19bbac02-076c-4ab5-8c58-3af1b097cbe9
 langcode: en
 status: true
 dependencies:
   config:
-    - views.view.schedule
+    - views.view.news
   module:
     - views
   theme:
     - bartik
-id: views_block__schedule_block_1
+id: views_block__news_block_1
 theme: bartik
 region: sidebar_first
-weight: null
+weight: -8
 provider: null
-plugin: 'views_block:schedule-block_1'
+plugin: 'views_block:news-block_1'
 settings:
-  id: 'views_block:schedule-block_1'
+  id: 'views_block:news-block_1'
   label: ''
   provider: views
   label_display: visible
   views_label: ''
-  items_per_page: none
+  items_per_page: '5'
 visibility: {  }
