--- a/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.event.field_content_reference
+    - field.field.node.event.field_date_and_time
     - field.field.node.event.field_en
     - field.field.node.event.field_image
     - field.field.node.event.field_long_text
@@ -20,6 +21,7 @@ content:
     weight: 100
 hidden:
   field_content_reference: true
+  field_date_and_time: true
   field_en: true
   field_image: true
   field_long_text: true
