--- a/sites/default/config/field.field.node.event.field_image.yml
+++ b/sites/default/config/field.field.node.event.field_image.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: event
 label: Image
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
