--- a/sites/default/config/field.field.node.event.field_long_text.yml
+++ b/sites/default/config/field.field.node.event.field_long_text.yml
@@ -13,7 +13,7 @@ entity_type: node
 bundle: event
 label: 'Event description'
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
