--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,12 @@
     "require": {
         "composer/installers": "^1.0.21",
         "wikimedia/composer-merge-plugin": "~1.3",
-        "drupal/address": "8.1.x-dev"
+        "drupal/address": "8.1.x-dev",
+        "phayes/geoPHP": "dev-master",
+        "drupal/geofield": "1.x-dev",
+        "drupal/geocoder": "2.x-dev",
+        "drupal/leaflet": "1.x-dev",
+        "drupal/leaflet_more_maps": "1.x-dev"
     },
     "replace": {
         "drupal/core": "~8.1"
@@ -45,7 +50,7 @@
     "repositories": {
         "drupal": {
             "type": "composer",
-            "url": "https://packagist.drupal-composer.org"
+            "url": "https://packages.drupal.org/8"
         }
     }
 }
