--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
         "drupal/address": "8.1.x-dev",
         "phayes/geoPHP": "dev-master",
         "drupal/geofield": "1.x-dev",
-        "drupal/geocoder": "2.x",
-        "drupal/leaflet": "dev-1.x",
-        "drupal/leaflet_more_maps": "dev-1.x"
+        "drupal/geocoder": "2.x"
     },
     "replace": {
         "drupal/core": "~8.1"
