--- a/sites/default/config/core.extension.yml
+++ b/sites/default/config/core.extension.yml
@@ -20,10 +20,16 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  geocoder: 0
+  geocoder_address: 0
+  geocoder_field: 0
+  geocoder_geofield: 0
   geofield: 0
   help: 0
   history: 0
   image: 0
+  leaflet: 0
+  leaflet_views: 0
   link: 0
   menu_ui: 0
   node: 0
