--- a/sites/default/config/field.field.node.film.field_music.yml
+++ b/sites/default/config/field.field.node.film.field_music.yml
@@ -11,7 +11,7 @@ field_name: field_music
 entity_type: node
 bundle: film
 label: Music
-description: ''
+description: Music
 required: false
 translatable: false
 default_value: {  }
