--- a/sites/default/config/field.storage.node.field_description.yml
+++ b/sites/default/config/field.storage.node.field_description.yml
@@ -1,12 +1,12 @@
-uuid: 0519dbda-8daa-480e-a406-33b7b6d03e6e
+uuid: 55637f47-f63b-470e-825b-d293741c8c6a
 langcode: en
 status: true
 dependencies:
   module:
     - node
     - text
-id: node.field_filmography
-field_name: field_filmography
+id: node.field_description
+field_name: field_description
 entity_type: node
 type: text_long
 settings: {  }
