--- a/sites/default/config/field.field.node.film.field_country.yml
+++ b/sites/default/config/field.field.node.film.field_country.yml
@@ -11,7 +11,7 @@ field_name: field_country
 entity_type: node
 bundle: film
 label: Country
-description: ''
+description: Country
 required: false
 translatable: false
 default_value: {  }
