--- a/sites/default/config/field.field.node.film.field_director.yml
+++ b/sites/default/config/field.field.node.film.field_director.yml
@@ -11,7 +11,7 @@ field_name: field_director
 entity_type: node
 bundle: film
 label: Director
-description: ''
+description: Director
 required: false
 translatable: false
 default_value: {  }
