--- a/sites/default/config/field.field.node.film.field_editing.yml
+++ b/sites/default/config/field.field.node.film.field_editing.yml
@@ -11,7 +11,7 @@ field_name: field_editing
 entity_type: node
 bundle: film
 label: Editing
-description: ''
+description: Editing
 required: false
 translatable: false
 default_value: {  }
