--- a/sites/default/config/field.field.node.film.field_screening.yml
+++ b/sites/default/config/field.field.node.film.field_screening.yml
@@ -11,7 +11,7 @@ field_name: field_screening
 entity_type: node
 bundle: film
 label: Screening
-description: ''
+description: Screening
 required: false
 translatable: false
 default_value: {  }
