--- a/sites/default/config/field.field.node.location.field_address.yml
+++ b/sites/default/config/field.field.node.location.field_address.yml
@@ -12,7 +12,7 @@ field_name: field_address
 entity_type: node
 bundle: location
 label: Address
-description: ''
+description: Address
 required: false
 translatable: false
 default_value: {  }
