--- a/sites/default/config/field.field.node.location.field_geofield.yml
+++ b/sites/default/config/field.field.node.location.field_geofield.yml
@@ -26,7 +26,7 @@ field_name: field_geofield
 entity_type: node
 bundle: location
 label: Location
-description: ''
+description: Location
 required: false
 translatable: false
 default_value: {  }
