--- a/sites/default/config/core.entity_form_display.node.film.default.yml
+++ b/sites/default/config/core.entity_form_display.node.film.default.yml
@@ -6,13 +6,13 @@ dependencies:
     - field.field.node.film.body
     - field.field.node.film.field_cast
     - field.field.node.film.field_contact
+    - field.field.node.film.field_content_reference
     - field.field.node.film.field_country
     - field.field.node.film.field_date_and_time
     - field.field.node.film.field_director
     - field.field.node.film.field_duration
     - field.field.node.film.field_editing
     - field.field.node.film.field_festivals
-    - field.field.node.film.field_mesto
     - field.field.node.film.field_music
     - field.field.node.film.field_producer
     - field.field.node.film.field_production
@@ -34,7 +34,7 @@ bundle: film
 mode: default
 content:
   body:
-    weight: 33
+    weight: 8
     settings:
       rows: 9
       summary_rows: 3
@@ -43,11 +43,11 @@ content:
     type: text_textarea_with_summary
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 2
     settings: {  }
     third_party_settings: {  }
   field_cast:
-    weight: 41
+    weight: 16
     settings:
       match_operator: CONTAINS
       size: 60
@@ -55,14 +55,22 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_contact:
-    weight: 50
+    weight: 25
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+  field_content_reference:
+    weight: 24
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
   field_country:
-    weight: 42
+    weight: 17
     settings:
       match_operator: CONTAINS
       size: 60
@@ -70,12 +78,12 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_date_and_time:
-    weight: 32
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
   field_director:
-    weight: 34
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -83,14 +91,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_duration:
-    weight: 46
+    weight: 21
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: text_textfield
   field_editing:
-    weight: 37
+    weight: 12
     settings:
       match_operator: CONTAINS
       size: 60
@@ -98,15 +106,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_festivals:
-    weight: 43
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-  field_mesto:
-    weight: 49
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -114,7 +114,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_music:
-    weight: 39
+    weight: 14
     settings:
       match_operator: CONTAINS
       size: 60
@@ -122,7 +122,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_producer:
-    weight: 35
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -130,7 +130,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_production:
-    weight: 48
+    weight: 23
     settings:
       match_operator: CONTAINS
       size: 60
@@ -138,7 +138,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_screening:
-    weight: 45
+    weight: 20
     settings:
       match_operator: CONTAINS
       size: 60
@@ -146,7 +146,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_screenplay:
-    weight: 36
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -154,7 +154,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_set_design:
-    weight: 40
+    weight: 15
     settings:
       match_operator: CONTAINS
       size: 60
@@ -162,7 +162,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_shooting:
-    weight: 44
+    weight: 19
     settings:
       match_operator: CONTAINS
       size: 60
@@ -170,7 +170,7 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_sound:
-    weight: 38
+    weight: 13
     settings:
       match_operator: CONTAINS
       size: 60
@@ -178,14 +178,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_title_original:
-    weight: 31
+    weight: 6
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: text_textfield
   field_year:
-    weight: 47
+    weight: 22
     settings:
       size: 60
       placeholder: ''
@@ -193,31 +193,31 @@ content:
     type: text_textfield
   path:
     type: path
-    weight: 30
+    weight: 5
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 3
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 4
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
