--- a/sites/default/config/field.field.node.film.field_content_reference.yml
+++ b/sites/default/config/field.field.node.film.field_content_reference.yml
@@ -1,19 +1,19 @@
-uuid: d1b827a6-3325-4beb-b555-1ebe5a54b533
+uuid: 4e5bd28c-c8c4-44f3-9f3d-bf756caa44eb
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_mesto
+    - field.storage.node.field_content_reference
     - node.type.film
     - node.type.location
-id: node.film.field_mesto
-field_name: field_mesto
+id: node.film.field_content_reference
+field_name: field_content_reference
 entity_type: node
 bundle: film
 label: Location
-description: Location
+description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
