--- a/sites/default/config/core.entity_form_display.node.sponsor.default.yml
+++ b/sites/default/config/core.entity_form_display.node.sponsor.default.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.node.sponsor.field_image
+    - field.field.node.sponsor.field_link
     - image.style.thumbnail
     - node.type.sponsor
   module:
     - image
+    - link
     - path
 id: node.sponsor.default
 targetEntityType: node
@@ -26,6 +28,13 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
+  field_link:
+    weight: 32
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
   path:
     type: path
     weight: 30
