--- a/sites/default/config/core.entity_view_display.node.sponsor.default.yml
+++ b/sites/default/config/core.entity_view_display.node.sponsor.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.sponsor.field_image
+    - field.field.node.sponsor.field_link
     - node.type.sponsor
   module:
     - image
+    - link
     - user
 id: node.sponsor.default
 targetEntityType: node
@@ -21,6 +23,17 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+  field_link:
+    weight: 102
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
   links:
     weight: 100
     settings: {  }
