--- a/sites/default/config/views.view.map.yml
+++ b/sites/default/config/views.view.map.yml
@@ -243,3 +243,21 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_geofield'
+  page_1:
+    display_plugin: page
+    id: page_1
+    display_title: Page
+    position: 1
+    display_options:
+      display_extenders: {  }
+      path: map
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      tags:
+        - 'config:field.storage.node.field_geofield'
