--- a/themes/PAFF/PAFF.libraries.yml
+++ b/themes/PAFF/PAFF.libraries.yml
@@ -2,18 +2,19 @@ global-styling:
   css:
     theme:
       css/style.css: {}
+      js/custom.js: {}
 
 bootstrap-scripts:
   js:
-    bootstrap/js/affix.js: {}
-    bootstrap/js/alert.js: {}
-    bootstrap/js/button.js: {}
-    bootstrap/js/carousel.js: {}
-    bootstrap/js/collapse.js: {}
-    bootstrap/js/dropdown.js: {}
-    bootstrap/js/modal.js: {}
-    bootstrap/js/tooltip.js: {}
-    bootstrap/js/popover.js: {}
-    bootstrap/js/scrollspy.js: {}
-    bootstrap/js/tab.js: {}
-    bootstrap/js/transition.js: {}
+    js/affix.js: {}
+    js/alert.js: {}
+    js/button.js: {}
+    js/carousel.js: {}
+    js/collapse.js: {}
+    js/dropdown.js: {}
+    js/modal.js: {}
+    js/tooltip.js: {}
+    js/popover.js: {}
+    js/scrollspy.js: {}
+    js/tab.js: {}
+    js/transition.js: {}
