--- a/sites/default/config/context.context.front.yml
+++ b/sites/default/config/context.context.front.yml
@@ -265,34 +265,63 @@ reactions:
         label_display: visible
         level: '1'
         depth: '0'
-        region: navigation_collapsible
-        weight: '0'
+        region: navigation
+        weight: '-2'
         context_mapping: {  }
         theme: PAFF
         unique: 0
         uuid: c83a1e8f-e1bf-4edf-94aa-dcd757f78b23
-      bae14c26-312a-47e7-86fc-421ba319a3d4:
-        id: page_title_block
-        label: 'Page title'
-        provider: core
-        label_display: 0
-        region: header
-        weight: '0'
-        context_mapping: {  }
-        theme: PAFF
-        unique: 0
-        uuid: bae14c26-312a-47e7-86fc-421ba319a3d4
       59deadab-1901-44f9-baae-dea268d97b6d:
         id: search_form_block
         label: 'Search form'
         provider: search
         label_display: visible
         region: sidebar_second
-        weight: '0'
+        weight: '-9'
         context_mapping: {  }
         theme: PAFF
         unique: 0
         uuid: 59deadab-1901-44f9-baae-dea268d97b6d
+      73f1db9f-b339-421b-bec6-5f76d95e5874:
+        id: 'block_content:3985bbb4-38e9-490a-80df-779865888274'
+        label: Dates
+        provider: block_content
+        label_display: visible
+        status: true
+        info: ''
+        view_mode: full
+        region: sidebar_second
+        weight: '0'
+        context_mapping: {  }
+        theme: PAFF
+        unique: 0
+        uuid: 73f1db9f-b339-421b-bec6-5f76d95e5874
+      791de54d-1871-4815-be88-f410ddacd483:
+        id: 'views_block:slider-block_1'
+        label: ''
+        provider: views
+        label_display: visible
+        views_label: ''
+        items_per_page: none
+        region: header
+        weight: '0'
+        context_mapping: {  }
+        theme: PAFF
+        unique: 0
+        uuid: 791de54d-1871-4815-be88-f410ddacd483
+      f97e8808-8004-4b8b-a9da-60c36d0a06cf:
+        id: 'views_block:sponsors-block_1'
+        label: ''
+        provider: views
+        label_display: visible
+        views_label: ''
+        items_per_page: none
+        region: footer
+        weight: '0'
+        context_mapping: {  }
+        theme: PAFF
+        unique: 0
+        uuid: f97e8808-8004-4b8b-a9da-60c36d0a06cf
     id: blocks
     saved: false
     uuid: 509e07cd-5f50-4153-bac4-2a38458b4dd5
